--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,6 @@
   margin-bottom: 10px;
 }
 
-/* input {
-    margin: 10px 0;
-    margin-bottom: 5px;  
-} */
-
-fieldset {
+.fieldset {
   margin-bottom: 20px;
 }
